package net.atos.wolf.services.action;

public enum ActionType {
    CHANGE_SECTION,
    TAKE_WEAPON,
    INITIALIZE_ATTRIBUTE,
    GET_KAI_SKILL,
    GET_KAI_SKILL_AND_PICK_WEAPON,
    GET_INITIAL_ITEMS,
    TAKE_RANDOM_WEAPON,
    MODIFY_ATTRIBUTE,
    TAKE_BACKPACK,
    BATTLE,
    IF_RANDOM_AND_SKILL,
    TAKE_ITEM,
    TAKE_BASE_ITEM





}
