package net.atos.wolf.services.character;

public enum BaseItems {
    KAI_ROBE(),
    LEATHER_BAG(),
    MAP(),
    BACKPACK(),
    BELT(),
    GREEN_TUNIC(),

}
