package net.atos.wolf.services.character;

public enum Item {

    VORDKA_JEWEL(),
    GOLDENKEY(),
    FEARWHEEL(),
    FIRESTONE(),
    IRON_PICKAXE(),
    KAI_BATTLE_CRYSTAL(),
    KAI_SLEEP_CRYSTAL(),
    KAI_KEY(),
    FIREBOTTLE(),
    FOOD(),
    STONE(),
    SALMON(),
    GUILDPASS(),
    MAGNIFYING_GLASS(),
    MESSING_SCISSOR(),
    IRON_KEY(),
    SILVER_KEY(),
    ROPE(),
    GREEN_EMERALD(),
    TORCH(),
    CINDER(),
    RED_ROBE(),
    SOUP(),
    MUSHROOMS(),
    PROVISCONS(),
    LAMBSHANK(),
    SILVERBRUSH(),
    LAUMSPUR_POTION(),




}
