package net.atos.wolf.services.character;

public enum KaiSkill {


    CAMOUFLAGE(),
    HUNT(),
    SIXTH_SENSE(),
    TRACKING(),
    HEAL(),
    ARMORY(),

    ARMORY_DAGGER(),
    ARMORY_SPEAR(),
    ARMORY_MACE(),
    ARMORY_SHORT_SWORD(),
    ARMORY_WARHAMMER(),
    ARMORY_SWORD(),
    ARMORY_AXE(),
    ARMORY_BATTLE_STAFF(),
    ARMORY_BROAD_SWORD(),
    MENTAL_DEFENCE(),
    THOUGHT_RAY(),
    ANIMAL_UNDERSTANDING(),
    MIND_OVER_MATTER(),
    RAGE(),



}
