package net.atos.wolf.character;

public enum Weapon {


    DAGGER(),
    SPEAR(),
    MACE(),
    SHORT_SWORD(),
    WARHAMMER(),
    SWORD(),
    AXE(),
    BATTLE_STAFF(),
    BROAD_SWORD(),


}
